# killrs

./: Cargo.toml  LICENSE  README.md
examples/: handler.py  simple.rs
src/: bin.rs  lib.rs  main.rs  mem.rs  monitor.rs  resource.rs  tui.rs
src/ui/: mod.rs  state.rs  ui.rs
tests/: test_monitor.rs
