[package]
name = "killrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.7", features = ["derive"] }
libc = "0.2.135"
sysinfo = "0.26.4"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
